[package]
name = "rover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.16"
aws-sdk-dynamodb = "1.64.0"
aws-sdk-s3 = "1.74.0"
clap = {version = "4.0", features = ["derive"]}
tokio = { version = "1.43.0", features = ["full"] }
